Added User schema, user-related OpenAPI definitions
