# server/openapi.yaml
@@ -21,6 +21,8 @@ tags:
     description: Operations related to questions
   - name: Answers
     description: Operations related to answers
+  - name: Authentication
+    description: Operations related to authentication
 
 components:
   responses:
@@ -41,6 +43,25 @@ components:
                 type: string
                 example: "Internal Server Error"
   schemas:
+    User:
+      type: object
+      required:
+        - username
+        - email
+        - password
+      properties:
+        username:
+          type: string
+          example: "devUser123"
+        email:
+          type: string
+          format: email
+          example: "user@example.com"
+        password:
+          type: string
+          format: password
+          example: "securePassword123"
+    
     Tag:
       type: object
       properties:
@@ -129,6 +150,24 @@ components:
         __v:
           type: integer
           example: 0
+    UserSignupRequest:
+      type: object
+      required:
+        - username
+        - email
+        - password
+      properties:
+        username:
+          type: string
+          example: "devUser123"
+        email:
+          type: string
+          format: email
+          example: "user@example.com"
+        password:
+          type: string
+          format: password
+          example: "securePassword123"
 
     AddAnswerRequest:
       type: object
@@ -196,7 +235,16 @@ components:
           type: string
           format: date-time
           example: "2025-02-02T00:28:19.406Z"
-
+    UserSignupResponse:
+      type: object
+      properties:
+        message:
+          type: string
+          example: "User registered successfully"
+        username:
+          type: string
+          example: "JohnDoe"
+            
     ErrorResponse:
       type: object
       properties:
@@ -352,3 +400,34 @@ paths:
           $ref: "#/components/responses/BadRequest"
         "500":
           $ref: "#/components/responses/InternalServerError"
+  /auth/signup:
+    post:
+      summary: Register a new user
+      description: Creates a new user account with a username, email, and password.
+      # operationId: signupUser
+      tags:
+        - Authentication
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/UserSignupRequest"
+            example:
+              username: "newUser"
+              email: "new@example.com"
+              password: "securePass123"
+      responses:
+        "201":
+          description: User registered successfully
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/UserSignupResponse"
+        "400":
+          $ref: "#/components/responses/BadRequest"
+        "500":
+          $ref: "#/components/responses/InternalServerError"
+
+        
+        
