# server/types/types.ts
@@ -55,6 +55,23 @@ export interface ITag {
 }
 
 /**
+ * A type representing a user object
+ * Use this type to define the shape of a user returned from the Users collection
+ * @property {string} _id - The unique identifier of the user
+ * @property {string} username - The username of the user
+ * @property {string} email - The email of the user
+ * @property {string} password - The hashed password of the user
+ * @property {Date} createdAt - The date when the user account was created
+ */
+export interface IUser {
+  _id?: string;
+  username: string;
+  email: string;
+  password: string;
+  createdAt?: Date;
+}
+
+/**
  * A type representing a tag document schema in the tags collection
  * except the _id field, which is explicitly defined to have the type
  * mongoose.Types.ObjectId
@@ -94,6 +111,21 @@ export interface IQuestionDocument
   hasAnswers: boolean;
   mostRecentActivity: Date;
   convertToIQuestion(): Promise<IQuestion>;
+}
+
+/**
+ * A type representing a user document schema in the users collection
+ * except the _id field, which is explicitly defined to have the type mongoose.Types.ObjectId
+ */
+export interface IUserDocument extends mongoose.Document {
+  _id: mongoose.Types.ObjectId;
+  username: string;
+  email: string;
+  password: string;
+  createdAt: Date;
+
+  // Instance Methods
+  comparePassword(candidatePassword: string): Promise<boolean>;
 }
 
 /**
@@ -155,4 +187,16 @@ export interface IAnswerDocument
   extends Omit<mongoose.Document, "_id">,
     Omit<IAnswerDB, "_id"> {
   _id: mongoose.Types.ObjectId;
+}
+
+/**
+ * A type representing the model for the users collection
+ * The interface also defines static methods for the model
+ *
+ * @property findByEmail - An async method that finds a user by email
+ * @property createUser - An async method that creates a new user
+ */
+export interface IUserModel extends mongoose.Model<IUserDocument> {
+  findByEmail(email: string): Promise<IUserDocument | null>;
+  createUser(userData: IUser): Promise<IUserDocument>;
 }
